<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">Transistor</string>
    <!-- please do not translate app_name - transcription into different alphabet types is fine though -->
    <string name="app_version_name" translatable="false">\"The Width of a Circle\"</string>
    <!-- Fragment -->
    <string name="fragment_settings_title">Settings</string>
    <!-- Dialogs -->
    <string name="dialog_add_station_title">Add Station</string>
    <string name="dialog_edit_save_changes">Save Changes</string>
    <string name="dialog_edit_station_name">Station name</string>
    <string name="dialog_edit_stream_uri">Stream address</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_message_no_network">Connect to the Internet.</string>
    <string name="dialog_error_title_no_network">Offline</string>
    <string name="dialog_find_station_button_add">Add</string>
    <string name="dialog_find_station_hint">Name or stream address</string>
    <string name="dialog_find_station_no_results">No results found.</string>
    <string name="dialog_find_station_title">Find Station</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_generic_button_okay">OK</string>
    <string name="dialog_generic_details_button">Show details</string>
    <string name="dialog_opml_import_details_default">No details available</string>
    <string name="dialog_rename_station_input_hint">Enter a new name</string>
    <string name="dialog_restore_collection_replace_existing">Replace current collection of radio stations with the radio station from backup?</string>
    <string name="dialog_yes_no_message_remove_station">Remove this station?</string>
    <string name="dialog_yes_no_message_update_station_images">Download latest version of all station images?</string>
    <string name="dialog_yes_no_negative_button_cancel">Cancel</string>
    <string name="dialog_yes_no_positive_button_default">Yes</string>
    <string name="dialog_yes_no_positive_button_remove_station">Remove</string>
    <string name="dialog_yes_no_positive_button_update_covers">Update</string>
    <!-- Toasts -->
    <string name="toast_message_error_download_error">Download error</string>
    <string name="toast_message_error_missing_storage_permission">Grant \"Read Storage\" permission to open this file.</string>
    <string name="toast_message_error_restart_playback_failed">Unable to restart playback.</string>
    <string name="toast_message_error_station_not_found">Station not found.</string>
    <string name="toast_message_install_file_helper">Please install a file manager.</string>
    <string name="toast_message_save_m3u">Saving radio stations as M3U…</string>
    <string name="toast_message_station_duplicate">Duplicate station.</string>
    <string name="toast_message_station_not_valid">Station is not valid.</string>
    <string name="toast_message_updating_collection">Updating collection of stations.</string>
    <string name="toast_message_updating_station_images">Updating station images.</string>
    <string name="toast_message_collection_restore">Restoring radio stations from backup.</string>
    <string name="toast_message_collection_backup">Backing up radio stations to:</string>
    <string name="toast_message_shortcut_created">Shortcut created.</string>
    <string name="toast_message_shortcut_not_created">Shortcut not created. This device does not allow the creation of shortcuts.</string>
    <string name="toast_message_copied_to_clipboard">Copied to clipboard.</string>
    <string name="toast_message_sleep_timer_unable_to_start">Please start playback first.</string>
    <string name="toast_message_no_image_picker">No image picker available. Consider installing a Gallery application.</string>
    <!-- player -->
    <string name="player_sheet_h2_station_metadata">Currently playing</string>
    <string name="player_sheet_h2_stream_url">Streaming link</string>
    <!-- Station List -->
    <string name="station_list_button_add_new_station">Add new station</string>
    <string name="station_list_button_settings">Settings</string>
    <!-- Notification -->
    <string name="notification_now_playing_channel_name">Playback Controls</string>
    <string name="notification_play">Play</string>
    <string name="notification_skip_to_previous">Previous</string>
    <string name="notification_skip_to_next">Next</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_cancel">Cancel</string>
    <!-- Settings -->
    <string name="pref_about_title">About</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_app_version_summary">Version</string>
    <string name="pref_app_version_title">App Version</string>
    <string name="pref_backup_title">Backup Stations</string>
    <string name="pref_backup_summary">Save collection of radio stations including images to device storage.</string>
    <string name="pref_buffer_size_summary_disabled">Using the default buffer size for playing a radio stream.</string>
    <string name="pref_buffer_size_summary_enabled">Larger buffer for playing a radio stream enabled. It may take longer for the playback to start.</string>
    <string name="pref_buffer_size_title">Use Larger Buffer</string>
    <string name="pref_dynamic_colors_summary_enabled">Using system accent colors for UI elements.</string>
    <string name="pref_dynamic_colors_summary_disabled">Using app\'s default colors for UI elements.</string>
    <string name="pref_dynamic_colors_title">Dynamic Colors</string>
    <string name="pref_edit_station_summary_disabled">Editing of station information disabled.</string>
    <string name="pref_edit_station_summary_enabled">Editing of station information enabled. Use long press to enter edit mode.</string>
    <string name="pref_edit_station_title">Edit Stations</string>
    <string name="pref_edit_station_stream_summary_enabled">Editing of streaming links enabled. Make sure to enter a correct stream address.</string>
    <string name="pref_edit_station_stream_summary_disabled">Editing of streaming links disabled. </string>
    <string name="pref_edit_station_stream_title">Edit Streaming Links</string>
    <string name="pref_general_title">General</string>
    <string name="pref_maintenance_title">Maintenance</string>
    <string name="pref_m3u_export_summary">Save your radio stations to an M3U playlist file that can be imported into other players.</string>
    <string name="pref_m3u_export_title">Export M3U</string>
    <string name="pref_restore_title">Restore Stations</string>
    <string name="pref_restore_summary">Restore collection of radio stations from backup. Existing stations will be replaced.</string>
    <string name="pref_report_issue_summary">Report bugs and suggest improvements on Codeberg.</string>
    <string name="pref_report_issue_title">Report Issue</string>
    <string name="pref_tap_anywhere_playback_summary_disabled">Tap on the play button to start listening to a radio station.</string>
    <string name="pref_tap_anywhere_playback_summary_enabled">Tap anywhere on a radio station card to start listening to it.</string>
    <string name="pref_tap_anywhere_playback_title">Tap Radio Station</string>
    <string name="pref_theme_selection_mode_dark">Dark mode</string>
    <string name="pref_theme_selection_mode_device_default">Same as device</string>
    <string name="pref_theme_selection_mode_light">Light mode</string>
    <string name="pref_theme_selection_summary">Current theme:</string>
    <string name="pref_theme_selection_title">App Theme</string>
    <string name="pref_update_station_images_summary">Download latest version of all station images.</string>
    <string name="pref_update_station_images_title">Update Station Images</string>
    <string name="pref_user_interface_transparency_effect_summary_enabled">Playback controls become transparent as you scroll.</string>
    <string name="pref_user_interface_transparency_effect_summary_disabled">Playback controls stay opaque during scrolling.</string>
    <string name="pref_user_interface_transparency_effect_title">User interface transparency effect</string>
    <!-- Accessibility Descriptions -->
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="description_btn_skip_to_previous">Skip to previous station</string>
    <string name="description_btn_skip_to_next">Skip to next station</string>
    <string name="descr_app_icon">App icon depicting an old radio</string>
    <string name="descr_back_icon">Navigate back</string>
    <string name="descr_card_small_play_button">Play/stop</string>
    <string name="descr_card_starred_station">Starred station</string>
    <string name="descr_card_station_image">Station image</string>
    <string name="descr_card_station_image_change">Change station image</string>
    <string name="descr_dialog_edit_place_on_home_screen_icon">Place on Home screen</string>
    <string name="descr_expanded_player_streaming_link_icon">Note icon</string>
    <string name="descr_expanded_player_metadata_copy_button">Copy the now playing information</string>
    <string name="descr_expanded_player_metadata_next_button">Next now playing metadata entry</string>
    <string name="descr_expanded_player_metadata_previous_button">Previous now playing metadata entry</string>
    <string name="descr_expanded_player_sleep_timer_cancel_button">Cancel sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_remaining_time">Time remaining on sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_start_button">Start sleep timer</string>
    <string name="descr_expanded_player_exit_fullscreen">Exit fullscreen</string>
    <string name="pref_full_screen_display_mode_summary">当前：</string>
    <string name="pref_full_screen_background_mode_summary">当前：</string>
    <string name="descr_player_station_image">Station image</string>
    <string name="descr_player_playback_button">Play/pause</string>
    <!-- Onboarding -->
    <string name="onboarding_app_description">Radio App</string>
    <string name="onboarding_app_get_started">Get started</string>
    <string name="onboarding_app_import_running">Importing your stations…</string>
    <string name="onboarding_app_rodriguez_quote_1" translatable="false">It started out with butterflies</string>
    <string name="onboarding_app_rodriguez_quote_2" translatable="false">On a velvet afternoon</string>
    <!-- app shortcuts -->
    <string name="shortcut_last_station_short_label">Last station</string>
    <string name="shortcut_last_station_long_label">Play last station</string>
    <string name="shortcut_last_station_disabled_message">Shortcut for playback of last station disabled.</string>
    <!-- Sample Text -->
    <string name="sample_text_station_metadata" translatable="false">David Bowie - The Man Who Sold The World</string>
    <string name="sample_text_station_name" translatable="false">Byte FM</string>
    <string name="sample_text_steam_url" translatable="false">http://bytefm.cast.addradio.de/bytefm/main/mid/stream</string>
    <string name="sample_text_sleep_timer_remaining_time" translatable="false">00:00</string>
    <!-- Google Cast -->
    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>

</resources>