<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/button_fullscreen_exit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/descr_expanded_player_exit_fullscreen"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_player_extended_chevron_down_24dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/station_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:background="?attr/colorSecondary"
            android:contentDescription="@string/descr_player_station_image"
            app:shapeAppearanceOverlay="@style/Circle"
            app:srcCompat="@drawable/ic_default_station_image_64dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/player_station_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/player_station_metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?attr/colorOnSurface" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/player_previous_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/descr_expanded_player_metadata_previous_button"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_player_extended_chevron_left_24dp" />

            <ImageButton
                android:id="@+id/player_play_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/selector_play_button"
                android:contentDescription="@string/descr_player_playback_button"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_player_play_symbol_48dp" />

            <ImageButton
                android:id="@+id/player_next_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/descr_expanded_player_metadata_next_button"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_player_extended_chevron_right_24dp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/player_fav_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/descr_expanded_player_sleep_timer_start_button"
            android:padding="8dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_player_extended_sleep_timer_24dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>