<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="horizontal">

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="32dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/stationIcon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="?attr/colorSecondary"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/Circle"
            app:srcCompat="@drawable/ic_default_station_image_64dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/textViewStationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="?attr/colorOnSurface"
            tools:text="AsiaFM高清音乐台" />

        <TextView
            android:id="@+id/textViewMetadata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            tools:text="许巍 - 我们" />

        <LinearLayout
            android:id="@+id/layoutPlaybackControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonPrev"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_btn_skip_to_previous"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_skip_previous_circle" />

            <ImageButton
                android:id="@+id/buttonPlay"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginHorizontal="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/detail_play"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_play_circle" />

            <ImageButton
                android:id="@+id/buttonNext"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/description_btn_skip_to_next"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_skip_next_circle" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonFullscreenExit"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/descr_expanded_player_exit_fullscreen"
        app:srcCompat="@drawable/ic_player_extended_chevron_down_24dp" />

</LinearLayout>