<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_blue"
    android:orientation="vertical">

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF3E5A73" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/stationIcon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:background="#FF3E5A73"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/Circle"
                app:srcCompat="@drawable/ic_default_station_image_64dp" />

            <TextView
                android:id="@+id/playerStationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/text_secondary_on_dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stationIcon"
                tools:text="Station Name" />

            <TextView
                android:id="@+id/playerStationMetadata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="@color/text_on_dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playerStationName"
                tools:text="Now Playing Metadata" />

            <LinearLayout
                android:id="@+id/layoutPlaybackControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/playerStationMetadata">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/buttonPrev"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/description_btn_skip_to_previous"
                    android:scaleType="fitXY"
                    android:tint="@color/text_on_dark_blue"
                    app:srcCompat="@drawable/ic_skip_previous_circle" />

                <ImageButton
                    android:id="@+id/buttonPlay"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/detail_play"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_play_symbol_white" />

                <ImageButton
                    android:id="@+id/buttonNext"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/description_btn_skip_to_next"
                    android:scaleType="fitXY"
                    android:tint="@color/text_on_dark_blue"
                    app:srcCompat="@drawable/ic_skip_next_circle" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/dividerBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF3E5A73" />

    <ImageButton
        android:id="@+id/buttonFullscreenExit"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/descr_expanded_player_exit_fullscreen"
        android:tint="@color/text_on_dark_blue"
        app:srcCompat="@drawable/ic_player_extended_chevron_down_24dp" />

</LinearLayout>